@@ -1,3 +1,6 @@
+
+	- use cstring in c++, not string.h.
+
 1.4  Wed Dec 15 08:08:49 CET 2004
 	- very very slight tuning of the hashing function.
 
